fix: bird flickering

--- a/src/components/Birdboard.module.css
+++ b/src/components/Birdboard.module.css
@@ -1,7 +1,7 @@
 .gameoverbox{
   height: 100%; 
   width: 100%;
-  background-color: #cc0000; 
+  background-color: #FE5E41; 
   z-index: 99; 
   position: absolute;
   top:0;
